# SkeletalAnimation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SkeletalAnimation.sln
SkeletalAnimation/: Animation.cpp  AnimationBones.cpp  AssimpExtensions.h  AssimpObject.cpp  AssimpObject.h  BoneObject.cpp  BoneObject.h  Main.cpp  SceneObject.cpp  SceneObject.h  SkeletalAnimation.vcxproj  SkeletalAnimation.vcxproj.filters  Stage.cpp  Stage.h  assimp_extras.h
SkeletalAnimation/Model_Files/: Car.3ds
SkeletalAnimation/Model_Files/Scene/: Street_environment_V01.mtl
SkeletalAnimation/core/: AssimpExtensions.h  OpenGLManager.cpp  OpenGLManager.h  Scene.cpp  Scene.h
SkeletalAnimation/core/scenes/: BoneScene.cpp  BoneScene.h  NormScene.cpp  NormScene.h
SkeletalAnimation/model/: AssimpObject.cpp  AssimpObject.h  BoxingRing.cpp  BoxingRing.h  Floor.cpp  Floor.h  Tree.cpp  Tree.h
SkeletalAnimation/objects/mtl/: HellBoy.mtl  Noodle.mtl  bird.mtl
enc_temp_folder/54018faeda019ee7ae1ee9157a99/: AnimationBones.cpp
